Liga a las evaluaciones ya hechas de las primeras presentaciones; presento la primera exposición de esta semana

--- a/exposiciones/README.org
+++ b/exposiciones/README.org
@@ -6,33 +6,33 @@
   la última sección de este archivo (/Criterios de evaluación grupal/
   y /por el docente/).
 
-  |------------+-----------------------------------------------------------------------------------------------+------------------------------------------------+----------+-------------------------------------------------------------------------------------------------+------------------------------|
-  |      Fecha | Tema                                                                                          | Integrantes                                    | Video    | Documentos                                                                                      | Evaluación                   |
-  |------------+-----------------------------------------------------------------------------------------------+------------------------------------------------+----------+-------------------------------------------------------------------------------------------------+------------------------------|
-  | 2025.03.25 | Sistemas Operativos de Tiempo Real                                                            | David Emilio Nava  y David Emmanuel Tavera     | [[https://youtu.be/C3R-TZCtFzE][Ver aquí]] | [[./NavaDavid-TaveraDavid/NavaDavid-TaveraDavid_Escrito.pdf][Escrito]], [[./NavaDavid-TaveraDavid/NavaDavid-TaveraDavid_Presentacion.pdf][Presentación]]                                                                           | [[https://encuestas.iiec.unam.mx/362521?lang=es-MX][Evaluación de los compañeros]] |
-  | 2025.03.25 | Virtualización: Cómo los sistemas operativos gestionan múltiples entornos en un sólo hardware | Luisa Segura                                   | [[https://youtu.be/vOf8BJZMcDM][Ver aquí]] | [[./SeguraLuisa/SeguraLuisa_Documentación.pdf][Documentación]], [[./SeguraLuisa/SeguraLuisa_Presentación.pdf][Presentación]]                                                                     | [[https://encuestas.iiec.unam.mx/936697?lang=es-MX][Evaluación de los compañeros]] |
-  | 2025.03.25 | Orquestadores de contenedores: Docker, Kubernetes, Proxmox VE y Podman                        | Juan Pablo Vera  y Carlos López Estrada        | [[https://youtu.be/8MHt8pPeG7I][Ver aquí]] | [[./LopezEstrada_VeraMorales/VeraMoralesExposicion.pdf][Guión de la presentación]], [[./LopezEstrada_VeraMorales/LopezEstradaExposicion.pdf][Presentación]]                                                          | [[https://encuestas.iiec.unam.mx/123548?lang=es-MX][Evaluación de los compañeros]] |
-  |            |                                                                                               |                                                |          | Otros documentos no utilizados: [[https://github.com/user-attachments/files/19459210/Proxmox.VE.y.Podman.Vera.Morales.pdf][Proxmox VE y Podman (texto)]], [[https://github.com/user-attachments/files/19459191/Exposicion.Promox-Podman.pdf][Proxmox VE y Podman (presentación)]] |                              |
-  | 2025.04.01 | Uso de los hilos en sistemas de comunicación: Chats interactivos                              | Hansel Tepal y Luis Salazar                    |          |                                                                                                 |                              |
-  | 2025.04.01 | Sistemas operativos para /edge computing/                                                     | Oscar Montiel y Samuel Torres                  |          |                                                                                                 |                              |
-  | 2025.04.01 | Comparación de rendimiento de ejecución de tareas en distintos sistemas operativos            | Jocelyn Miramón e Isaías Iñaki Membrilla       |          |                                                                                                 |                              |
-  | 2025.04.08 | Desduplicación                                                                                | Valentina Domínguez                            |          |                                                                                                 |                              |
-  | 2025.04.08 | Pacman: El motor de gestión de software en Arch Linux                                         | Andrea Saldaña y Emiliano Salgado              |          |                                                                                                 |                              |
-  | 2025.04.08 | Manejo de recursos en los videojuegos de 8 bits                                               | Alfonso Rodríguez y Emilia Macarena            |          |                                                                                                 |                              |
-  | 2025.04.14 | /Vacaciones de Semana Santa/                                                                  |                                                |          |                                                                                                 |                              |
-  | 2025.04.21 | Unix y su papel en la historia de los Sistemas Operativos                                     | Alan Acosta y José Ángel Rubio                 |          |                                                                                                 |                              |
-  | 2025.04.21 | Optimizaciones de proceso operativos con inteligencia artificial                              | María Fernanda Ayala y Elizabeth Portilla      |          |                                                                                                 |                              |
-  | 2025.04.21 |                                                                                               | Barvara Juárez                                 |          |                                                                                                 |                              |
-  | 2025.04.28 | Proceso de creación de un sistema Linux embebido                                              | Luis Antonio Ugartechea y Enrique Job Calderón |          |                                                                                                 |                              |
-  | 2025.04.28 | Programación funcional                                                                        | Leonardo Mikel Cervantes y Arnau Roger Solé    |          |                                                                                                 |                              |
-  | 2025.04.28 | Sistemas operativos para la nube                                                              | Carlos Cano y Ángel Cortés                     |          |                                                                                                 |                              |
-  | 2025.05.05 | Sistemas de archivos NTFS y exFat                                                             | Yordi Josué Jiménez y Gustavo Valenzuela       |          |                                                                                                 |                              |
-  | 2025.05.05 | Sistema de archivos Btrfs (B-Tree File System)                                                | Christian Gustavo Romero e Iker Ávila          |          |                                                                                                 |                              |
-  | 2025.05.05 | Seguridad en el kernel: Cómo proteger a un SO contra rootkits                                 | Héctor Zambrano y Anuar Meléndez               |          |                                                                                                 |                              |
-  | 2025.05.12 | Aspectos de sistemas operativos en los dispositivos IoT                                       | Rodrigo García Peñafort y Gustavo Santana      |          |                                                                                                 |                              |
-  | 2025.05.12 | Sistemas Operativos en Equipos Náuticos                                                       | Luis Martínez y Joseph Urbano                  |          |                                                                                                 |                              |
-  | 2025.05.12 | /Listener/: Propósito, intereacción y usos                                                    | Erick Nava Santiago y Eric Ramírez Valdovinos  |          |                                                                                                 |                              |
-  |------------+-----------------------------------------------------------------------------------------------+------------------------------------------------+----------+-------------------------------------------------------------------------------------------------+------------------------------|
+  |------------+-----------------------------------------------------------------------------------------------+------------------------------------------------+----------+-------------------------------------------------------------------------------------------------+----------------------------------------------|
+  |      Fecha | Tema                                                                                          | Integrantes                                    | Video    | Documentos                                                                                      | Evaluación                                   |
+  |------------+-----------------------------------------------------------------------------------------------+------------------------------------------------+----------+-------------------------------------------------------------------------------------------------+----------------------------------------------|
+  | 2025.03.25 | Sistemas Operativos de Tiempo Real                                                            | David Emilio Nava  y David Emmanuel Tavera     | [[https://youtu.be/C3R-TZCtFzE][Ver aquí]] | [[./NavaDavid-TaveraDavid/NavaDavid-TaveraDavid_Escrito.pdf][Escrito]], [[./NavaDavid-TaveraDavid/NavaDavid-TaveraDavid_Presentacion.pdf][Presentación]]                                                                           | [[./NavaDavid-TaveraDavid/resultados_encuesta.pdf][Resultados de la encuesta]], [[./NavaDavid-TaveraDavid/evaluacion.org][Evaluación global]] |
+  | 2025.03.25 | Virtualización: Cómo los sistemas operativos gestionan múltiples entornos en un sólo hardware | Luisa Segura                                   | [[https://youtu.be/vOf8BJZMcDM][Ver aquí]] | [[./SeguraLuisa/SeguraLuisa_Documentación.pdf][Documentación]], [[./SeguraLuisa/SeguraLuisa_Presentación.pdf][Presentación]]                                                                     | [[./SeguraLuisa/resultados_encuesta.pdf][Resultados de la encuesta]], [[./SeguraLuisa/evaluacion.org][Evaluación global]] |
+  | 2025.03.25 | Orquestadores de contenedores: Docker, Kubernetes, Proxmox VE y Podman                        | Juan Pablo Vera  y Carlos López Estrada        | [[https://youtu.be/8MHt8pPeG7I][Ver aquí]] | [[./LopezEstrada_VeraMorales/VeraMoralesExposicion.pdf][Guión de la presentación]], [[./LopezEstrada_VeraMorales/LopezEstradaExposicion.pdf][Presentación]]                                                          | [[./LopezEstrada_VeraMorales/resultados_encuesta.pdf][Resultados de la encuesta]], [[./LopezEstrada_VeraMorales/evaluacion.org][Evaluación global]] |
+  |            |                                                                                               |                                                |          | Otros documentos no utilizados: [[https://github.com/user-attachments/files/19459210/Proxmox.VE.y.Podman.Vera.Morales.pdf][Proxmox VE y Podman (texto)]], [[https://github.com/user-attachments/files/19459191/Exposicion.Promox-Podman.pdf][Proxmox VE y Podman (presentación)]] |                                              |
+  | 2025.04.01 | Uso de los hilos en sistemas de comunicación: Chats interactivos                              | Hansel Tepal y Luis Salazar                    | [[https://youtu.be/W3SQQNOPMRQ][Ver aquí]] | [[./SalazarLuis-TepalHansel/Documentacion.pdf][Documentación]], [[./SalazarLuis-TepalHansel/Presentacion.pdf][Presentación]]                                                                     | [[https://encuestas.iiec.unam.mx/537687?lang=es-MX][Evaluación de los compañeros]]                 |
+  | 2025.04.01 | Sistemas operativos para /edge computing/                                                     | Oscar Montiel y Samuel Torres                  |          |                                                                                                 |                                              |
+  | 2025.04.01 | Comparación de rendimiento de ejecución de tareas en distintos sistemas operativos            | Jocelyn Miramón e Isaías Iñaki Membrilla       |          |                                                                                                 |                                              |
+  | 2025.04.08 | Desduplicación                                                                                | Valentina Domínguez                            |          |                                                                                                 |                                              |
+  | 2025.04.08 | Pacman: El motor de gestión de software en Arch Linux                                         | Andrea Saldaña y Emiliano Salgado              |          |                                                                                                 |                                              |
+  | 2025.04.08 | Manejo de recursos en los videojuegos de 8 bits                                               | Alfonso Rodríguez y Emilia Macarena Arriaga    |          |                                                                                                 |                                              |
+  | 2025.04.14 | /Vacaciones de Semana Santa/                                                                  |                                                |          |                                                                                                 |                                              |
+  | 2025.04.21 | Unix y su papel en la historia de los Sistemas Operativos                                     | Alan Acosta y José Ángel Rubio                 |          |                                                                                                 |                                              |
+  | 2025.04.21 | Optimizaciones de proceso operativos con inteligencia artificial                              | María Fernanda Ayala y Elizabeth Portilla      |          |                                                                                                 |                                              |
+  | 2025.04.21 |                                                                                               | Barvara Juárez                                 |          |                                                                                                 |                                              |
+  | 2025.04.28 | Proceso de creación de un sistema Linux embebido                                              | Luis Antonio Ugartechea y Enrique Job Calderón |          |                                                                                                 |                                              |
+  | 2025.04.28 | Programación funcional                                                                        | Leonardo Mikel Cervantes y Arnau Roger Solé    |          |                                                                                                 |                                              |
+  | 2025.04.28 | Sistemas operativos para la nube                                                              | Carlos Cano y Ángel Cortés                     |          |                                                                                                 |                                              |
+  | 2025.05.05 | Sistemas de archivos NTFS y exFat                                                             | Yordi Josué Jiménez y Gustavo Valenzuela       |          |                                                                                                 |                                              |
+  | 2025.05.05 | Sistema de archivos Btrfs (B-Tree File System)                                                | Christian Gustavo Romero e Iker Ávila          |          |                                                                                                 |                                              |
+  | 2025.05.05 | Seguridad en el kernel: Cómo proteger a un SO contra rootkits                                 | Héctor Zambrano y Anuar Meléndez               |          |                                                                                                 |                                              |
+  | 2025.05.12 | Aspectos de sistemas operativos en los dispositivos IoT                                       | Rodrigo García Peñafort y Gustavo Santana      |          |                                                                                                 |                                              |
+  | 2025.05.12 | Sistemas Operativos en Equipos Náuticos                                                       | Luis Martínez y Joseph Urbano                  |          |                                                                                                 |                                              |
+  | 2025.05.12 | /Listener/: Propósito, intereacción y usos                                                    | Erick Nava Santiago y Eric Ramírez Valdovinos  |          |                                                                                                 |                                              |
+  |------------+-----------------------------------------------------------------------------------------------+------------------------------------------------+----------+-------------------------------------------------------------------------------------------------+----------------------------------------------|
   # El semestre termina el 24 de mayo. Programo exposiciones hasta la semana del 12.
   # van 33 alumnos que registran tema.
 * ¿Y el tema?
@@ -78,6 +78,14 @@
     (cubrir el material completo que quieran exponer). Consideren que la
     exposición en video debe ser de unos 15-20 minutos; desarrollar más de 4
     páginas llevará a un material demasiado largo 😐
+
+  - Les solicito el documento en buena medida para ayudarme a guiarlos a
+    desarrollar un buen trabajo, relacionado con la materia y con buena
+    profundidad, y hasta donde esté en mis capacidades, para evitar que caigan
+    en algunos errores. Para esto, les pido que me envíen sus documentos cuando
+    mucho el /jueves previo/ a su exposición, para que me de tiempo de
+    revisarlo, y para que a ustedes les de tiempo de incorporar las
+    modificaciones que pueda yo sugerirles.
 
   - La elección de tema y fecha deben ser acordadas previamente con el
     profesor, con no menos de dos semanas de anticipación.
