Asigno el tema de exposición que quedaba pendiente

--- a/exposiciones/README.org
+++ b/exposiciones/README.org
@@ -22,7 +22,7 @@
   | 2025.04.14 | /Vacaciones de Semana Santa/                                                                  |                                                |          |                                                                                                 |                                              |
   | 2025.04.21 | Unix y su papel en la historia de los Sistemas Operativos                                     | Alan Acosta y José Ángel Rubio                 |          |                                                                                                 |                                              |
   | 2025.04.21 | Optimizaciones de proceso operativos con inteligencia artificial                              | María Fernanda Ayala y Elizabeth Portilla      |          |                                                                                                 |                                              |
-  | 2025.04.21 |                                                                                               | Barvara Juárez                                 |          |                                                                                                 |                                              |
+  | 2025.04.21 | El sistema operativo TempleOS                                                                 | Barvara Juárez y Jesus Talonia                 |          |                                                                                                 |                                              |
   | 2025.04.28 | Proceso de creación de un sistema Linux embebido                                              | Luis Antonio Ugartechea y Enrique Job Calderón |          |                                                                                                 |                                              |
   | 2025.04.28 | Programación funcional                                                                        | Leonardo Mikel Cervantes y Arnau Roger Solé    |          |                                                                                                 |                                              |
   | 2025.04.28 | Sistemas operativos para la nube                                                              | Carlos Cano y Ángel Cortés                     |          |                                                                                                 |                                              |
