Ligas al material de la exposición de Oscar y Samuel

--- a/exposiciones/README.org
+++ b/exposiciones/README.org
@@ -14,7 +14,7 @@
   | 2025.03.25 | Orquestadores de contenedores: Docker, Kubernetes, Proxmox VE y Podman                        | Juan Pablo Vera  y Carlos López Estrada        | [[https://youtu.be/8MHt8pPeG7I][Ver aquí]] | [[./LopezEstrada_VeraMorales/VeraMoralesExposicion.pdf][Guión de la presentación]], [[./LopezEstrada_VeraMorales/LopezEstradaExposicion.pdf][Presentación]]                                                          | [[./LopezEstrada_VeraMorales/resultados_encuesta.pdf][Resultados de la encuesta]], [[./LopezEstrada_VeraMorales/evaluacion.org][Evaluación global]] |
   |            |                                                                                               |                                                |          | Otros documentos no utilizados: [[https://github.com/user-attachments/files/19459210/Proxmox.VE.y.Podman.Vera.Morales.pdf][Proxmox VE y Podman (texto)]], [[https://github.com/user-attachments/files/19459191/Exposicion.Promox-Podman.pdf][Proxmox VE y Podman (presentación)]] |                                              |
   | 2025.04.01 | Uso de los hilos en sistemas de comunicación: Chats interactivos                              | Hansel Tepal y Luis Salazar                    | [[https://youtu.be/W3SQQNOPMRQ][Ver aquí]] | [[./SalazarLuis-TepalHansel/Documentacion.pdf][Documentación]], [[./SalazarLuis-TepalHansel/Presentacion.pdf][Presentación]]                                                                     | [[https://encuestas.iiec.unam.mx/537687?lang=es-MX][Evaluación de los compañeros]]                 |
-  | 2025.04.01 | Sistemas operativos para /edge computing/                                                     | Oscar Montiel y Samuel Torres                  |          |                                                                                                 |                                              |
+  | 2025.04.01 | Sistemas operativos para /edge computing/                                                     | Oscar Montiel y Samuel Torres                  | [[https://youtu.be/8sfBlBHC6vc][Ver aquí]] | [[./MontielJuarez-TorresSamuel/MontielOscar_TorresSamuel-Documentacion.pdf][Documentación]], [[MontielJuarez-TorresSamuel/MontielOscar_TorresSamuel-Presentacion.pdf][Presentación]]                                                                     | [[https://encuestas.iiec.unam.mx/484591?lang=es-MX][Evaluación de los compañeros]]                 |
   | 2025.04.01 | Comparación de rendimiento de ejecución de tareas en distintos sistemas operativos            | Jocelyn Miramón e Isaías Iñaki Membrilla       |          |                                                                                                 |                                              |
   | 2025.04.08 | Desduplicación                                                                                | Valentina Domínguez                            |          |                                                                                                 |                                              |
   | 2025.04.08 | Pacman: El motor de gestión de software en Arch Linux                                         | Andrea Saldaña y Emiliano Salgado              |          |                                                                                                 |                                              |
