--- a/exposiciones/README.org
+++ b/exposiciones/README.org
@@ -18,11 +18,11 @@
   | 2025.04.01 | Comparación de rendimiento de ejecución de tareas en distintos sistemas operativos            | Jocelyn Miramón e Isaías Iñaki Membrilla       | [[https://youtu.be/js0G5O4S8SI][Ver aquí]] | [[./MembrillaIsaias-MiramonJocelyn/MembrillaIsaias-MiramonJocelyn-Expo.pdf][Exposición]]                                                                                      | [[https://encuestas.iiec.unam.mx/725694?lang=es-MX][Evaluación de los compañeros]]                 |
   | 2025.04.08 | Desduplicación                                                                                | Valentina Domínguez                            |          |                                                                                                 |                                              |
   | 2025.04.08 | Pacman: El motor de gestión de software en Arch Linux                                         | Andrea Saldaña y Emiliano Salgado              |          |                                                                                                 |                                              |
-  | 2025.04.08 | Manejo de recursos en los videojuegos de 8 bits                                               | Alfonso Rodríguez y Emilia Macarena Arriaga    |          |                                                                                                 |                                              |
+  | 2025.04.08 | Manejo de recursos en los videojuegos de 8 bits                                               | Alfonso Rodríguez y Emilia Macarena Arriaga    | [[https://youtu.be/TFA06HB7x40][Ver aquí]] | [[./RodríguezAlfonso-ArriagaEmilia/DocumentoSISTOP_Arriaga_Zuluaga.pdf][Documento]], [[./RodríguezAlfonso-ArriagaEmilia/SISTOP_ManejoDeRecursosEnLosVideoJuegosDe8bits.pdf][Presentación]]                                                                         | [[https://encuestas.iiec.unam.mx/523349?lang=es-MX][Evaluación de los compañeros]]                                             |
   | 2025.04.14 | /Vacaciones de Semana Santa/                                                                  |                                                |          |                                                                                                 |                                              |
   | 2025.04.21 | Unix y su papel en la historia de los Sistemas Operativos                                     | Alan Acosta y José Ángel Rubio                 |          |                                                                                                 |                                              |
   | 2025.04.21 | Optimizaciones de proceso operativos con inteligencia artificial                              | María Fernanda Ayala y Elizabeth Portilla      |          |                                                                                                 |                                              |
-  | 2025.04.21 | El sistema operativo TempleOS                                                                 | Barvara Juárez y Jesus Talonia                 |          |                                                                                                 |                                              |
+  | 2025.04.21 | TempleOS: Las implicaciones de un sistema operativo operando en el anillo 0 de protección     | Barvara Juárez y Jesus Talonia                 |          |                                                                                                 |                                              |
   | 2025.04.28 | Proceso de creación de un sistema Linux embebido                                              | Luis Antonio Ugartechea y Enrique Job Calderón |          |                                                                                                 |                                              |
   | 2025.04.28 | Programación funcional                                                                        | Leonardo Mikel Cervantes y Arnau Roger Solé    |          |                                                                                                 |                                              |
   | 2025.04.28 | Sistemas operativos para la nube                                                              | Carlos Cano y Ángel Cortés                     |          |                                                                                                 |                                              |
