--- a/exposiciones/README.org
+++ b/exposiciones/README.org
@@ -11,14 +11,15 @@
   |------------+-----------------------------------------------------------------------------------------------+------------------------------------------------+----------+-------------------------------------------------------------------------------------------------+----------------------------------------------|
   | 2025.03.25 | Sistemas Operativos de Tiempo Real                                                            | David Emilio Nava  y David Emmanuel Tavera     | [[https://youtu.be/C3R-TZCtFzE][Ver aquí]] | [[./NavaDavid-TaveraDavid/NavaDavid-TaveraDavid_Escrito.pdf][Escrito]], [[./NavaDavid-TaveraDavid/NavaDavid-TaveraDavid_Presentacion.pdf][Presentación]]                                                                           | [[./NavaDavid-TaveraDavid/resultados_encuesta.pdf][Resultados de la encuesta]], [[./NavaDavid-TaveraDavid/evaluacion.org][Evaluación global]] |
   | 2025.03.25 | Virtualización: Cómo los sistemas operativos gestionan múltiples entornos en un sólo hardware | Luisa Segura                                   | [[https://youtu.be/vOf8BJZMcDM][Ver aquí]] | [[./SeguraLuisa/SeguraLuisa_Documentación.pdf][Documentación]], [[./SeguraLuisa/SeguraLuisa_Presentación.pdf][Presentación]]                                                                     | [[./SeguraLuisa/resultados_encuesta.pdf][Resultados de la encuesta]], [[./SeguraLuisa/evaluacion.org][Evaluación global]] |
-  | 2025.03.25 | Orquestadores de contenedores: Docker, Kubernetes, Proxmox VE y Podman                        | Juan Pablo Vera  y Carlos López Estrada        | [[https://youtu.be/8MHt8pPeG7I][Ver aquí]] | [[./LopezEstrada_VeraMorales/VeraMoralesExposicion.pdf][Guión de la presentación]], [[./LopezEstrada_VeraMorales/LopezEstradaExposicion.pdf][Presentación]]                                                          | [[./LopezEstrada_VeraMorales/resultados_encuesta.pdf][Resultados de la encuesta]], [[./LopezEstrada_VeraMorales/evaluacion.org][Evaluación global]] |
+  | 2025.03.25 | Orquestadores de contenedores: Docker, Kubernetes, Proxmox VE y Podman                        | Juan Pablo Vera  y Carlos López Estrada        | [[https://youtu.be/8MHt8pPeG7I][Ver aquí]] | [[./LopezEstrada_VeraMorales/VeraMoralesExposicion.pdf][Guión de la presentación]], [[./LopezEstrada_VeraMorales/LopezEstradaExposicion.pdf][Presentación]],                                                         | [[./LopezEstrada_VeraMorales/resultados_encuesta.pdf][Resultados de la encuesta]], [[./LopezEstrada_VeraMorales/evaluacion.org][Evaluación global]] |
   |            |                                                                                               |                                                |          | Otros documentos no utilizados: [[https://github.com/user-attachments/files/19459210/Proxmox.VE.y.Podman.Vera.Morales.pdf][Proxmox VE y Podman (texto)]], [[https://github.com/user-attachments/files/19459191/Exposicion.Promox-Podman.pdf][Proxmox VE y Podman (presentación)]] |                                              |
-  | 2025.04.01 | Uso de los hilos en sistemas de comunicación: Chats interactivos                              | Hansel Tepal y Luis Salazar                    | [[https://youtu.be/W3SQQNOPMRQ][Ver aquí]] | [[./SalazarLuis-TepalHansel/Documentacion.pdf][Documentación]], [[./SalazarLuis-TepalHansel/Presentacion.pdf][Presentación]]                                                                     | [[https://encuestas.iiec.unam.mx/537687?lang=es-MX][Evaluación de los compañeros]]                 |
-  | 2025.04.01 | Sistemas operativos para /edge computing/                                                     | Oscar Montiel y Samuel Torres                  | [[https://youtu.be/8sfBlBHC6vc][Ver aquí]] | [[./MontielJuarez-TorresSamuel/MontielOscar_TorresSamuel-Documentacion.pdf][Documentación]], [[MontielJuarez-TorresSamuel/MontielOscar_TorresSamuel-Presentacion.pdf][Presentación]]                                                                     | [[https://encuestas.iiec.unam.mx/484591?lang=es-MX][Evaluación de los compañeros]]                 |
-  | 2025.04.01 | Comparación de rendimiento de ejecución de tareas en distintos sistemas operativos            | Jocelyn Miramón e Isaías Iñaki Membrilla       | [[https://youtu.be/js0G5O4S8SI][Ver aquí]] | [[./MembrillaIsaias-MiramonJocelyn/MembrillaIsaias-MiramonJocelyn-Expo.pdf][Exposición]]                                                                                      | [[https://encuestas.iiec.unam.mx/725694?lang=es-MX][Evaluación de los compañeros]]                 |
+  | 2025.04.01 | Uso de los hilos en sistemas de comunicación: Chats interactivos                              | Hansel Tepal y Luis Salazar                    | [[https://youtu.be/W3SQQNOPMRQ][Ver aquí]] | [[./SalazarLuis-TepalHansel/Documentacion.pdf][Documentación]], [[./SalazarLuis-TepalHansel/Presentacion.pdf][Presentación]],                                                                    | [[SalazarLuis-TepalHansel/resultados_encuesta.pdf][Resultados de la encuesta]], [[SalazarLuis-TepalHansel/evaluacion.org][Evaluación global]] |
+  |            |                                                                                               |                                                |          | Ejemplos:  [[./SalazarLuis-TepalHansel/Ejemplos/Ejemplo_Calculadora][1-Calculadora]], [[./SalazarLuis-TepalHansel/Ejemplos/Ejemplo_ChatSimple][2-Chat simple]], [[./SalazarLuis-TepalHansel/Ejemplos/Ejemplo_ChatConcurrente][3-Chat con concurrencia]], [[./SalazarLuis-TepalHansel/Ejemplos/Ejemplo_ChatSincro][4-Chat sincronizado]]           |                                              |
+  | 2025.04.01 | Sistemas operativos para /edge computing/                                                     | Oscar Montiel y Samuel Torres                  | [[https://youtu.be/8sfBlBHC6vc][Ver aquí]] | [[./MontielJuarez-TorresSamuel/MontielOscar_TorresSamuel-Documentacion.pdf][Documentación]], [[MontielJuarez-TorresSamuel/MontielOscar_TorresSamuel-Presentacion.pdf][Presentación]]                                                                     | [[MontielJuarez-TorresSamuel/resultados_encuesta.pdf][Resultados de la encuesta]], [[MontielJuarez-TorresSamuel/evaluacion.org][Evaluación global]] |
+  | 2025.04.01 | Comparación de rendimiento de ejecución de tareas en distintos sistemas operativos            | Jocelyn Miramón e Isaías Iñaki Membrilla       | [[https://youtu.be/js0G5O4S8SI][Ver aquí]] | [[./MembrillaIsaias-MiramonJocelyn/MembrillaIsaias-MiramonJocelyn-Expo.pdf][Exposición]]                                                                                      | [[MembrillaIsaias-MiramonJocelyn/resultados_encuesta.pdf][Resultados de la encuesta]], [[MembrillaIsaias-MiramonJocelyn/evaluacion.org][Evaluación global]] |
   | 2025.04.08 | Desduplicación                                                                                | Valentina Domínguez                            |          |                                                                                                 |                                              |
-  | 2025.04.08 | Pacman: El motor de gestión de software en Arch Linux                                         | Andrea Saldaña y Emiliano Salgado              |          |                                                                                                 |                                              |
-  | 2025.04.08 | Manejo de recursos en los videojuegos de 8 bits                                               | Alfonso Rodríguez y Emilia Macarena Arriaga    | [[https://youtu.be/TFA06HB7x40][Ver aquí]] | [[./RodríguezAlfonso-ArriagaEmilia/DocumentoSISTOP_Arriaga_Zuluaga.pdf][Documento]], [[./RodríguezAlfonso-ArriagaEmilia/SISTOP_ManejoDeRecursosEnLosVideoJuegosDe8bits.pdf][Presentación]]                                                                         | [[https://encuestas.iiec.unam.mx/523349?lang=es-MX][Evaluación de los compañeros]]                                             |
+  | 2025.04.08 | Pacman: El motor de gestión de software en Arch Linux                                         | Andrea Saldaña y Emiliano Salgado              |          | [[./SaldañaAndrea-SalgadoRoman/Pacman_Exposicion_Saldaña_Salgado.pdf][Documento]], [[./SaldañaAndrea-SalgadoRoman/Presentación_Pacman_ArchLinux.pdf][Presentación]]                                                                         | [[https://encuestas.iiec.unam.mx/835743?lang=es-MX][Evaluación de los compañeros]]                 |
+  | 2025.04.08 | Manejo de recursos en los videojuegos de 8 bits                                               | Alfonso Rodríguez y Emilia Macarena Arriaga    | [[https://youtu.be/TFA06HB7x40][Ver aquí]] | [[./RodríguezAlfonso-ArriagaEmilia/DocumentoSISTOP_Arriaga_Zuluaga.pdf][Documento]], [[./RodríguezAlfonso-ArriagaEmilia/SISTOP_ManejoDeRecursosEnLosVideoJuegosDe8bits.pdf][Presentación]]                                                                         | [[https://encuestas.iiec.unam.mx/523349?lang=es-MX][Evaluación de los compañeros]]                 |
   | 2025.04.14 | /Vacaciones de Semana Santa/                                                                  |                                                |          |                                                                                                 |                                              |
   | 2025.04.21 | Unix y su papel en la historia de los Sistemas Operativos                                     | Alan Acosta y José Ángel Rubio                 |          |                                                                                                 |                                              |
   | 2025.04.21 | Optimizaciones de proceso operativos con inteligencia artificial                              | María Fernanda Ayala y Elizabeth Portilla      |          |                                                                                                 |                                              |
