Agrego datos restantes sobre las exposiciones de la semana del paro y vacaciones

--- a/exposiciones/README.org
+++ b/exposiciones/README.org
@@ -17,8 +17,8 @@
   |            |                                                                                               |                                                |          | Ejemplos:  [[./SalazarLuis-TepalHansel/Ejemplos/Ejemplo_Calculadora][1-Calculadora]], [[./SalazarLuis-TepalHansel/Ejemplos/Ejemplo_ChatSimple][2-Chat simple]], [[./SalazarLuis-TepalHansel/Ejemplos/Ejemplo_ChatConcurrente][3-Chat con concurrencia]], [[./SalazarLuis-TepalHansel/Ejemplos/Ejemplo_ChatSincro][4-Chat sincronizado]]           |                                              |
   | 2025.04.01 | Sistemas operativos para /edge computing/                                                     | Oscar Montiel y Samuel Torres                  | [[https://youtu.be/8sfBlBHC6vc][Ver aquí]] | [[./MontielJuarez-TorresSamuel/MontielOscar_TorresSamuel-Documentacion.pdf][Documentación]], [[MontielJuarez-TorresSamuel/MontielOscar_TorresSamuel-Presentacion.pdf][Presentación]]                                                                     | [[MontielJuarez-TorresSamuel/resultados_encuesta.pdf][Resultados de la encuesta]], [[MontielJuarez-TorresSamuel/evaluacion.org][Evaluación global]] |
   | 2025.04.01 | Comparación de rendimiento de ejecución de tareas en distintos sistemas operativos            | Jocelyn Miramón e Isaías Iñaki Membrilla       | [[https://youtu.be/js0G5O4S8SI][Ver aquí]] | [[./MembrillaIsaias-MiramonJocelyn/MembrillaIsaias-MiramonJocelyn-Expo.pdf][Exposición]]                                                                                      | [[MembrillaIsaias-MiramonJocelyn/resultados_encuesta.pdf][Resultados de la encuesta]], [[MembrillaIsaias-MiramonJocelyn/evaluacion.org][Evaluación global]] |
-  | 2025.04.08 | Desduplicación                                                                                | Valentina Domínguez                            |          |                                                                                                 |                                              |
-  | 2025.04.08 | Pacman: El motor de gestión de software en Arch Linux                                         | Andrea Saldaña y Emiliano Salgado              |          | [[./SaldañaAndrea-SalgadoRoman/Pacman_Exposicion_Saldaña_Salgado.pdf][Documento]], [[./SaldañaAndrea-SalgadoRoman/Presentación_Pacman_ArchLinux.pdf][Presentación]]                                                                         | [[https://encuestas.iiec.unam.mx/835743?lang=es-MX][Evaluación de los compañeros]]                 |
+  | 2025.04.08 | Desduplicación                                                                                | Valentina Domínguez                            | [[https://youtu.be/XZtdGrWuafs][Ver aquí]] | [[./DominguezValentina/DominguezValentina_Doc.pdf][Documento]], [[./DominguezValentina/DominguezValentina_Presentacion.pptx][Presentación]]                                                                         | [[https://encuestas.iiec.unam.mx/111781?lang=es-MX][Evaluación de los compañeros]]                 |
+  | 2025.04.08 | Pacman: El motor de gestión de software en Arch Linux                                         | Andrea Saldaña y Emiliano Salgado              | [[https://youtu.be/HawGN4uj9bM][Ver aquí]] | [[./SaldañaAndrea-SalgadoRoman/Pacman_Exposicion_Saldaña_Salgado.pdf][Documento]], [[./SaldañaAndrea-SalgadoRoman/Presentación_Pacman_ArchLinux.pdf][Presentación]]                                                                         | [[https://encuestas.iiec.unam.mx/835743?lang=es-MX][Evaluación de los compañeros]]                 |
   | 2025.04.08 | Manejo de recursos en los videojuegos de 8 bits                                               | Alfonso Rodríguez y Emilia Macarena Arriaga    | [[https://youtu.be/TFA06HB7x40][Ver aquí]] | [[./RodríguezAlfonso-ArriagaEmilia/DocumentoSISTOP_Arriaga_Zuluaga.pdf][Documento]], [[./RodríguezAlfonso-ArriagaEmilia/SISTOP_ManejoDeRecursosEnLosVideoJuegosDe8bits.pdf][Presentación]]                                                                         | [[https://encuestas.iiec.unam.mx/523349?lang=es-MX][Evaluación de los compañeros]]                 |
   | 2025.04.14 | /Vacaciones de Semana Santa/                                                                  |                                                |          |                                                                                                 |                                              |
   | 2025.04.21 | Unix y su papel en la historia de los Sistemas Operativos                                     | Alan Acosta y José Ángel Rubio                 |          |                                                                                                 |                                              |
